--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,9 @@ build:
 requirements:
   build:
     - pkg-config
-    - toolchain
+    - {{ compiler("c") }}
+
+  host:
     - libogg 1.3.*
     - libvorbis 1.3.*
     - libpng >=1.6.23,<1.7
