--- a/recipe/CMakeLists.txt
+++ b/recipe/CMakeLists.txt
@@ -1,116 +1,99 @@
-cmake_minimum_required (VERSION 3.1.0)
-project (THEORA)
+cmake_minimum_required(VERSION 3.0)
+project(theora LANGUAGES C)
 
-## Find depenencies
-
-# libogg
-
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
 FIND_PATH(OGG_INCLUDE_DIR
     ogg.h
     PATH_SUFFIXES include/ogg
 )
 
-FIND_LIBRARY(OGG_LIBRARIES
+FIND_LIBRARY(OGG_LIBRARY
     NAMES ogg libogg
     PATH_SUFFIXES lib
 )
-message(STATUS Found ogg headers at ${OGG_INCLUDE_DIR})
-message(STATUS Found ogg libs at ${OGG_LIBRARIES})
 
-include_directories(OGG_INCLUDE_DIR)
-
-# libvorbis
-
-# FIND_PATH(VORBIS_INCLUDE_DIR
-#     vorbis.h
-#     PATH_SUFFIXES include/vorbis
-# )
-
-# FIND_LIBRARY(VORBIS_LIBRARIES
-#     NAMES vorbis libvorbis
-#     PATH_SUFFIXES lib
-# )
-
-# message(STATUS Found vorbis headers at ${VORBIS_INCLUDE_DIR})
-# message(STATUS Found vorbis libs at ${VORBIS_LIBRARIES})
-
-# include_directories(VORBIS_INCLUDE_DIR)
-
-## Build libtheora
-
-add_definitions(-DOC_X86_ASM)
-include_directories("${THEORA_SOURCE_DIR}/include")
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build)
-
-set(THEORA_SRC
-   lib/analyze.c
-   lib/apiwrapper.c
-   lib/bitpack.c
-   lib/collect.c
-   lib/decapiwrapper.c
-   lib/decinfo.c
-   lib/decode.c
-   lib/dequant.c
-   lib/encapiwrapper.c
-   lib/encfrag.c
-   lib/encinfo.c
-   lib/encode.c
-   lib/enquant.c
-   lib/fdct.c
-   lib/fragment.c
-   lib/huffdec.c
-   lib/huffenc.c
-   lib/idct.c
-   lib/info.c
-   lib/internal.c
-   lib/mathops.c
-   lib/mcenc.c
-   lib/quant.c
-   lib/rate.c
-   lib/state.c
-   lib/tokenize.c
-   lib/x86/mmxencfrag.c
-   lib/x86/mmxfdct.c
-   lib/x86/mmxfrag.c
-   lib/x86/mmxidct.c
-   lib/x86/mmxstate.c
-   lib/x86/sse2idct.c
-   lib/x86/x86cpu.c
-   lib/x86/x86enquant.c
-   lib/x86/x86state.c
+file(GLOB HEADERS
+  "include/theora/codec.h"
+  "include/theora/theora.h"
+  "include/theora/theoradec.h"
+  "include/theora/theoraenc.h"
 )
 
-add_library(THEORA SHARED
-	${THEORA_SRC}
+include_directories("include")
+include_directories(${OGG_INCLUDE_DIR})
+
+set(LIBTHEORA_COMMON
+  "lib/apiwrapper.c"
+  "lib/bitpack.c"
+  "lib/dequant.c"
+  "lib/fragment.c"
+  "lib/idct.c"
+  "lib/info.c"
+  "lib/internal.c"
+  "lib/state.c"
+  "lib/quant.c"
+
+  "lib/x86_vc/mmxfrag.c"
+  "lib/x86_vc/mmxidct.c"
+  "lib/x86_vc/mmxstate.c"
+  "lib/x86_vc/x86state.c"
 )
 
-target_link_libraries (THEORA
-	${OGG_LIBRARIES} 
-    # ${VORBIS_LIBRARIES}
+set(LIBTHEORA_ENC
+  "lib/analyze.c"
+  "lib/encapiwrapper.c"
+  "lib/encfrag.c"
+  "lib/encinfo.c"
+  "lib/encode.c"
+  "lib/enquant.c"
+  "lib/fdct.c"
+  "lib/huffenc.c"
+  "lib/mathops.c"
+  "lib/mcenc.c"
+  "lib/rate.c"
+  "lib/tokenize.c"
+
+  "lib/x86_vc/mmxencfrag.c"
+  "lib/x86_vc/mmxfdct.c"
+  "lib/x86_vc/x86enc.c"
 )
 
-# if(WIN32)
-# 	if(MSVC)
-# 		configure_file(	${CMAKE_CURRENT_SOURCE_DIR}/win32/THEORA.def ${CMAKE_CURRENT_BINARY_DIR}/win32/THEORA.def @ONLY)
-# 		set_target_properties(THEORA PROPERTIES LINK_FLAGS "/DEF:win32/THEORA.def")
-# 	endif()
-# endif()
-
-set_target_properties(THEORA 
-	PROPERTIES DEFINE_SYMBOL "DLL_EXPORT"
-)
-set_target_properties(THEORA
-	PROPERTIES PREFIX "" OUTPUT_NAME "libtheora"
+set(LIBTHEORA_DEC
+  "lib/decapiwrapper.c"
+  "lib/decinfo.c"
+  "lib/decode.c"
+  "lib/huffdec.c"
 )
 
-##### Installation targets #####
-install(TARGETS THEORA
-  LIBRARY DESTINATION "lib${LIB_SUFFIX}"
-  ARCHIVE DESTINATION "lib${LIB_SUFFIX}"
-  RUNTIME DESTINATION bin)
+add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
+add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
 
-file(GLOB INCLUDE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
-# Copy .h files to include dir.
-install(DIRECTORY ${THEORA_SOURCE_DIR}/include/theora DESTINATION include
-	FILES_MATCHING PATTERN "*.h")
+option(USE_X86 "Use x86 optimization" OFF)
+if(USE_X86)
+  add_definitions(-DOC_X86_ASM)
+endif()
+
+if (BUILD_SHARED_LIBS)
+  add_definitions(-DLIBTHEORA_EXPORTS)
+endif()
+
+add_library(theora-common OBJECT ${LIBTHEORA_COMMON} ${HEADERS})
+add_library(theora-enc OBJECT ${LIBTHEORA_ENC} ${HEADERS})
+add_library(theora-dec OBJECT ${LIBTHEORA_DEC} ${HEADERS})
+
+add_library(theora $<TARGET_OBJECTS:theora-common> $<TARGET_OBJECTS:theora-enc> $<TARGET_OBJECTS:theora-dec> "libtheora.def")
+target_link_libraries(theora ${OGG_LIBRARY})
+
+add_library(theoraenc $<TARGET_OBJECTS:theora-common> $<TARGET_OBJECTS:theora-enc> "win32/xmingw32/libtheoraenc-all.def")
+target_link_libraries(theoraenc ${OGG_LIBRARY})
+
+add_library(theoradec $<TARGET_OBJECTS:theora-common> $<TARGET_OBJECTS:theora-dec> "win32/xmingw32/libtheoradec-all.def")
+target_link_libraries(theoradec ${OGG_LIBRARY})
+
+install(FILES ${HEADERS} DESTINATION include/theora)
+
+install(TARGETS theora theoraenc theoradec
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION bin
+  ARCHIVE DESTINATION lib
+)
