--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,12 +11,13 @@ source:
 
 build:
     number: 1001
-    skip: True  # [win]
+    skip: True  # [win and vc<14]
 
 requirements:
   build:
     - pkg-config
     - {{ compiler("c") }}
+    - cmake  # [win]
 
   host:
     - libogg 1.3.*
@@ -42,6 +43,9 @@ test:
     - test -f ${PREFIX}/lib/lib{{ each_libtheora_lib }}.a                           # [unix]
     - test -f ${PREFIX}/lib/lib{{ each_libtheora_lib }}.dylib                       # [osx]
     - test -f ${PREFIX}/lib/lib{{ each_libtheora_lib }}.so                          # [linux]
+    - if exist %PREFIX%\\Library\\lib\\{{ each_libtheora_lib }}.lib (exit 0) else (exit 1)  # [win]
+    - if exist %PREFIX%\\Library\\include\\{{ each_libtheora_lib }}.h (exit 0) else (exit 1)  # [win]
+    - if exist %PREFIX%\\Library\\bin\\{{ each_libtheora_lib }}.dll (exit 0) else (exit 1)  # [win]
     {% endfor %}
 
 
