--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,15 +21,15 @@ requirements:
 
   host:
     - libogg 1.3.*
-    - libvorbis 1.3.*
-    - libpng >=1.6.23,<1.7
-    - zlib 1.2.*
+    - libvorbis 1.3.*  # [unix or osx]
+    - libpng >=1.6.23,<1.7  # [unix or osx]
+    - zlib 1.2.*  # [unix or osx]
 
   run:
     - libogg 1.3.*
-    - libvorbis 1.3.*
-    - libpng >=1.6.23,<1.7
-    - zlib 1.2.*
+    - libvorbis 1.3.*  # [unix or osx]
+    - libpng >=1.6.23,<1.7  # [unix or osx]
+    - zlib 1.2.*  # [unix or osx]
 
 test:
   commands:
