--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,10 @@ source:
   sha256: b6ae1ee2fa3d42ac489287d3ec34c5885730b1296f0801ae577a35193d3affbc
 
 build:
-    number: 1002
-    skip: True  # [win and vc<14]
+  number: 1003
+  skip: True  # [win and vc<14]
+  run_exports:
+    - {{ pin_subpackage('libtheora', max_pin='x.x') }}
 
 requirements:
   build:
