--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - pkg-config
     - {{ compiler("c") }}
     - cmake  # [win]
+    - make   # [unix]
 
   host:
     - libogg 1.3.*
