--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,6 @@
 conda_forge_output_validation: true
 provider: {linux_aarch64: default}
-build_platform: {osx_arm64: osx_64,  linux_ppc64le: linux_64}
+build_platform: {osx_arm64: osx_64, linux_ppc64le: linux_64}
+github:
+  branch_name: main
+  tooling_branch_name: main
