Try only documented requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: b6ae1ee2fa3d42ac489287d3ec34c5885730b1296f0801ae577a35193d3affbc
 
 build:
-  number: 1005
+  number: 1006
   skip: True  # [win and vc<14]
   run_exports:
     - {{ pin_subpackage('libtheora', max_pin='x.x') }}
@@ -19,6 +19,7 @@ requirements:
   build:
     - pkg-config
     - {{ compiler("c") }}
+    - {{ stdlib("c") }}
     - autoconf  # [unix]
     - automake  # [unix]
     - libtool   # [unix]
@@ -28,14 +29,10 @@ requirements:
   host:
     - libogg 1.3.*
     - libvorbis 1.3.*  # [unix or osx]
-    - libpng >=1.6.23,<1.7  # [unix or osx]
-    - zlib 1.2.*  # [unix or osx]
 
   run:
     - libogg 1.3.*
     - libvorbis 1.3.*  # [unix or osx]
-    - libpng >=1.6.23,<1.7  # [unix or osx]
-    - zlib 1.2.*  # [unix or osx]
 
 test:
   commands:
